# webclass-parser

./: LICENSE  README.md  pyproject.toml
.github/workflows/: lint.yml  test.yml
webclass_parser/: __init__.py  models.py  parse_clazz_table.py  parse_info_list.py  request.py  test_parse_clazz_table.py  test_parse_info_list.py  test_request.py
